added few paths for jiit 128 campus

--- a/templates/home.html
+++ b/templates/home.html
@@ -66,6 +66,8 @@
           <option value="#">SELECT SOURCE</option>
           <option value="home">Home</option>
           <option value="main gate">Main Gate</option>
+          <option value="JIIT LRC">JIIT LRC</option>
+          <option value="JIIT ground">JIIT Ground</option>
         </select>
       </p>
 
@@ -78,6 +80,8 @@
           <option value="#">SELECT DESTINATION</option>
           <option value="home">Home</option>
           <option value="main gate">Main Gate</option>
+          <option value="JIIT LRC">JIIT LRC</option>
+          <option value="JIIT ground">JIIT Ground</option>
         </select>
       </p>
 
