Added few location of home society and jiit-62

--- a/templates/home.html
+++ b/templates/home.html
@@ -66,8 +66,12 @@
           <option value="#">SELECT SOURCE</option>
           <option value="home">Home</option>
           <option value="main gate">Main Gate</option>
+          <option value="JIIT 62 Gate1">JIIT 62 Gate 1</option>
+          <option value="AcademicB">ABB-II</option>
           <option value="JIIT LRC">JIIT LRC</option>
           <option value="JIIT ground">JIIT Ground</option>
+          <option value="Aditya Swim">Aditya Swimming</option>
+          <option value="Gate1">Aditya Gate1</option>
         </select>
       </p>
 
@@ -80,8 +84,12 @@
           <option value="#">SELECT DESTINATION</option>
           <option value="home">Home</option>
           <option value="main gate">Main Gate</option>
+          <option value="JIIT 62 Gate1">JIIT 62 Gate 1</option>
+          <option value="AcademicB">ABB-II</option>
           <option value="JIIT LRC">JIIT LRC</option>
           <option value="JIIT ground">JIIT Ground</option>
+          <option value="Aditya Swim">Aditya Swimming</option>
+          <option value="Gate1">Aditya Gate1</option>
         </select>
       </p>
 
